# qubo-optimization-wrapper

./: .gitattributes  .gitignore  LICENSE  environment.yml  pyproject.toml  readme.md
config/dwave/: dwave.conf
env/: start_env.ps1  verify_env.py
notebooks/: Ejemplo - Bombillas encendidas.ipynb  PyQubo_benchmark.ipynb  QUBO_1.ipynb
scripts/: backend_test.py
src/qubo_optimization_wrapper/: __init__.py  utils.py
src/qubo_optimization_wrapper/backend_handler/: __init__.py  backend_factory.py  backends.py  execution_backend.py  utils.py
src/qubo_optimization_wrapper/backend_handler/backends/: backend_interface.py  dwave_hardware_backend.py  qpu_backend.py  simulated_backend.py
src/qubo_optimization_wrapper/hamiltonian_creation/: HR.py  hamiltonian.py
src/qubo_optimization_wrapper/visualization/: v_decode_sampleset.py  v_hamiltonian.py
